--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "5.2.0-beta"
   },
   "dependencies": {
+    "@2bad/bitrix": "^2.5.1",
     "@directus/sdk": "^12.0.0",
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/nuxt": "^4.11.2",
