--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@2bad/bitrix": "^2.5.1",
     "@directus/sdk": "^12.0.0",
+    "@nuxt-alt/proxy": "^2.3.2",
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/nuxt": "^4.11.2",
     "@vee-validate/yup": "^4.11.3",
