--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@pinia/nuxt": "^0.4.11",
     "@vee-validate/nuxt": "^4.11.2",
     "@vee-validate/yup": "^4.11.3",
+    "@zag-js/accordion": "^0.21.0",
     "@zag-js/dialog": "^0.20.0",
     "@zag-js/menu": "^0.15.0",
     "@zag-js/pin-input": "^0.16.0",
@@ -54,7 +55,6 @@
     "swiper": "^10.1.0",
     "vue-yandex-maps": "^1.1.0",
     "vue3-google-map": "^0.17.0",
-    "vue3-perfect-scrollbar": "^1.6.1",
     "vue3-toastify": "^0.1.12",
     "yup": "^1.2.0"
   }
