--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "@vee-validate/yup": "^4.11.3",
     "@zag-js/accordion": "^0.21.0",
     "@zag-js/dialog": "^0.20.0",
+    "@zag-js/file-upload": "^0.21.0",
     "@zag-js/menu": "^0.15.0",
     "@zag-js/pin-input": "^0.16.0",
     "@zag-js/popover": "^0.16.0",
     "@zag-js/select": "^0.18.0",
     "@zag-js/tabs": "^0.16.0",
+    "@zag-js/types": "^0.21.0",
     "@zag-js/vue": "^0.20.0",
     "greensms": "^1.9.1",
     "maska": "^2.1.10",
