--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nuxt-app",
   "private": true,
   "scripts": {
-    "build": "bunx nuxi build",
-    "dev": "bunx nuxi dev",
+    "build": "nuxi build",
+    "dev": "nuxi dev",
     "start": "npm run build && pm2 start ecosystem.config.js --only frontend",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -50,6 +50,7 @@
     "@zag-js/types": "^0.21.0",
     "@zag-js/vue": "^0.20.0",
     "greensms": "^1.9.1",
+    "jsonwebtoken": "^9.0.2",
     "maska": "^2.1.10",
     "mitt": "^3.0.1",
     "nuxt-directus": "^5.5.0",
