--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pinia": "^2.1.6",
     "sass": "^1.66.1",
     "swiper": "^10.1.0",
+    "three": "^0.158.0",
     "vue-yandex-maps": "^1.1.0",
     "vue3-google-map": "^0.17.0",
     "vue3-toastify": "^0.1.12",
