--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@directus/sdk": "^12.0.0",
     "@nuxt-alt/proxy": "^2.3.2",
     "@pinia/nuxt": "^0.4.11",
+    "@programic/vue3-tooltip": "^1.0.0",
     "@vee-validate/nuxt": "^4.11.2",
     "@vee-validate/yup": "^4.11.3",
     "@zag-js/accordion": "^0.21.0",
